--- a/docs/01.rst
+++ b/docs/01.rst
@@ -1,7 +1,7 @@
 BX1のWi-Fi AP設定とSORACOM Air(3Gネットワーク)設定
 ==================================================
 
-本章のゴール: **TODOへのpingをWebUI上から行い、3G回線がつながっている**
+本章のゴール: **pingをWebUI上から行い、3G回線がつながっていることを確認する**
 
 作業の位置づけ;
 
@@ -109,7 +109,7 @@ Wi-Fi AP設定とSORACOM Air(3Gネットワーク)設定
 +---------------------------+--------------------------------------------------------------------------------+
 | Wi-Fi / SSID              | iotfamily_<シリアル番号> (例: iotfamily_F2A00788)                              |
 +---------------------------+--------------------------------------------------------------------------------+
-| Wi-Fi / チャンネル        | <シリアル番号 最後の値> (例:F2A00788なら "8")  (0の方は10, A,B,C,D,Eの方は 11) |
+| Wi-Fi / チャンネル        | <シリアル番号 最後の値> (例:F2A00788なら "8")  (0の方は10 / A~Eの方は 11) |
 +---------------------------+--------------------------------------------------------------------------------+
 | Wi-Fi / パスワード        | openblocks                                                                     |
 +---------------------------+--------------------------------------------------------------------------------+
@@ -139,15 +139,15 @@ APNの設定は再起動で反映されるため、BX1を再起動します
 
 .. image:: images/bx1_01_webui2-reboot.png
 
-TODOへのping
-------------
+pingで確認
+----------
 
 再起動が無事終了すればBX1は3Gネットワークに接続された状態となっています
 
 WebUI上からpingを発信して確認してみます
 
 #. WebUIにログインした後 [ネットワーク] - [通信確認]
-#. 宛先ホスト: ``aaaa``
+#. 宛先ホスト: ``metadata.soracom.io``
 
 .. image:: images/bx1_01_webui3-ping.png
 
