Tweak fix in 00

--- a/docs/00.rst
+++ b/docs/00.rst
@@ -74,7 +74,7 @@ http://aws.amazon.com/jp/register-flow/
 
 .. note::
 
-  Node.jsやcurl等のツール類は別途EC2インスタンスを用意して、そちらで実施することも可能です
+  Node.jsやcurl等のツール類はBX1の中に入っていますので、それを利用することも可能です(ただしBX1から利用する場合は3G回線費用が別途かかる可能性が有ります。その他、EC2インスタンスを用意して、そちらで実施することも可能です
 
 注意事項
 --------
