--- a/docs/00.rst
+++ b/docs/00.rst
@@ -1,7 +1,7 @@
 全体構成
 ========
 
-OpenBlocks IoT BX1 (以下 BX1) を使用し、富士通コンポーネント社製 温度・加速度センサーデバイス “FWM8BLZ02” のデータを “SORACOM Air” の回線で “AWS IoT” に送信し、Amazon Elasticsearch Service(以下 Amazon ES)上のKibanaでグラフ化するところまでを解説します
+OpenBlocks IoT BX1 (以下 BX1) を使用し、富士通コンポーネント社製 温度・加速度センサーデバイス "FWM8BLZ02" のデータを "SORACOM Air" の回線で "AWS IoT" に送信し、"Amazon Elasticsearch Service" (以下 Amazon ES)上のKibanaでグラフ化するところまでを解説します
 
 全体構成図と流れは以下のようになります
 
