--- a/docs/01.rst
+++ b/docs/01.rst
@@ -83,11 +83,11 @@ http://192.168.254.254:880
 
 下記にて設定願います (本来は複雑な組み合わせが好ましいのですが、ハンズオン時のトラブルシュート対策です)
 
-+----------+------------------------------------------+
-| ID       | iotadmin                                 |
-+----------+------------------------------------------+
-| Password | 0BSI0T (ゼロ ビー エス アイ ゼロ ティー) |
-+----------+------------------------------------------+
++----------+----------------------------------------------+
+| ID       | ``iotadmin``                                 |
++----------+----------------------------------------------+
+| Password | ``0BSI0T`` (ゼロ ビー エス アイ ゼロ ティー) |
++----------+----------------------------------------------+
 
 成功すると、ネットワーク設定画面が表示されます
 
@@ -105,19 +105,19 @@ Wi-Fi AP設定とSORACOM Air(3Gネットワーク)設定
 +---------------------------+--------------------------------------------------------------------------------+
 | ホスト名                  | <シリアル番号> (例 F2A00788)                                                   |
 +---------------------------+--------------------------------------------------------------------------------+
-| ドメイン                  | openblocks.local                                                               |
+| ドメイン                  | ``openblocks.local``                                                           |
 +---------------------------+--------------------------------------------------------------------------------+
 | Wi-Fi / SSID              | iotfamily_<シリアル番号> (例: iotfamily_F2A00788)                              |
 +---------------------------+--------------------------------------------------------------------------------+
 | Wi-Fi / チャンネル        | <シリアル番号 最後の値> (例:F2A00788なら "8")  (0の方は10 / A~Eの方は 11)      |
 +---------------------------+--------------------------------------------------------------------------------+
-| Wi-Fi / パスワード        | openblocks                                                                     |
+| Wi-Fi / パスワード        | ``openblocks``                                                                 |
 +---------------------------+--------------------------------------------------------------------------------+
-| モバイル回線 / APN        | soracom.io                                                                     |
+| モバイル回線 / APN        | ``soracom.io``                                                                 |
 +---------------------------+--------------------------------------------------------------------------------+
-| モバイル回線 / ユーザ名   | sora                                                                           |
+| モバイル回線 / ユーザ名   | ``sora``                                                                       |
 +---------------------------+--------------------------------------------------------------------------------+
-| モバイル回線 / パスワード | sora                                                                           |
+| モバイル回線 / パスワード | ``sora``                                                                       |
 +---------------------------+--------------------------------------------------------------------------------+
 
 .. note::
