--- a/docs/02.rst
+++ b/docs/02.rst
@@ -94,7 +94,7 @@ BX1内へのデータ収集機能を開始する
 +------------------+---------------------+
 | 送信対象         | 送信する            |
 +------------------+---------------------+
-| 取得時間間隔(ms) | 1000                |
+| 取得時間間隔(ms) | ``1000``            |
 +------------------+---------------------+
 | 送信先設定       | localのみにチェック |
 +------------------+---------------------+
@@ -145,3 +145,4 @@ pd-handler-stdout.log に ``timeout: ...`` などと表示されている
 #. データ収集プロセスを再起動する (チューターにご相談ください)
 
 これらで対処可能です
+
