--- a/docs/07.rst
+++ b/docs/07.rst
@@ -6,15 +6,22 @@ AWSリソース
 
 本ハンズオンで作成したAWSリソース等は継続的に費用がかかるものがあるため、不要ならば削除するようにしてください
 
-* Amazon ESインスタンス (課金されるので注意)
+* AWS IoT
+
+  * ルール
+  * 証明書
+
+    #. アタッチされている "モノ" とポリシをデタッチ
+    #. 証明書のDeactivate
+
+  * "モノ"
+  * ポリシ
+
 * AWS Lambda function
 
   * IAMロール
 
-* AWS IoT
-
-  * Certificate
-  * Things
+* Amazon ESインスタンス (課金されるので注意)
 
 .. _bx1_reset:
 
@@ -23,7 +30,9 @@ BX1の初期化
 
 下記コマンドを **シリアルコンソールから** 実行してください
 
-``/srv/reset/reset_bx1.sh yes``
+.. code-block:: none
+
+  /srv/reset/reset_bx1.sh yes
 
 やりかたがわからない場合はチューターにご相談ください
 
@@ -43,6 +52,15 @@ BX1の初期化
 センサーデータは、BX1を通過すると下記のようなJSONデータとなります
 このフォーマットをAWS IoT内のRule Engineや、Lambdaで処理することが可能です
 (jqを使って整形済み。コメントは付与されません)
+
+富士通コンポーネント社製 温度・加速度センサーデバイス "FWM8BLZ02"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+.. code-block:: json
+
+
+TI 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 .. code-block:: json
 
@@ -99,10 +117,15 @@ BX1 は給電用USB ケーブルが、シリアルコンソールを兼任して
 
 FTDIのシリアルポートドライバがインストール済みのWindows / Mac OS Xや、Linuxならば追加ドライバ不要でアクセス可能です
 
-- ID: root
-- Password: 0BSI0T (ゼロ ビー エス アイ ゼロ ティー)
++----------+----------------------------------------------+
+| ID       | ``root``                                     |
++----------+----------------------------------------------+
+| Password | ``0BSI0T`` (ゼロ ビー エス アイ ゼロ ティー) |
++----------+----------------------------------------------+
 
 e.g.) screen コマンドによるアクセス
 
-``screen /dev/ttyUSB0 115200``
+.. code-block:: note
+
+  screen /dev/ttyUSB0 115200
 
