--- a/docs/04.rst
+++ b/docs/04.rst
@@ -5,7 +5,7 @@ AWS LambdaのLambda function作成
 
 作業の位置づけ;
 
-.. image:: images/bx1_04_highlevelarchitecture.png
+.. image:: images/bx1_04_overview.png
 
 IAMロールの作成
 ---------------
