--- a/docs/05.rst
+++ b/docs/05.rst
@@ -1,7 +1,7 @@
 AWS IoTの設定
 =============
 
-本章のゴール: **AWS IoTでMQTT(mosquitto_subコマンド)による受信ができることを確認する**
+本章のゴール: **AWS IoTでMQTT(AWS IoT上のテストサイト)による受信ができることを確認する**
 
 作業の位置づけ;
 
