--- a/docs/03.rst
+++ b/docs/03.rst
@@ -51,20 +51,20 @@ Amazon ESが利用可能になったら、動作確認を行います
   * ここでは確認のために ``curl`` コマンドを使用します。準備願います (`Windowsの方向け <http://techblo.hatenablog.com/entry/2015/08/06/214306>`_)
   * ``${YOUR_ES_ENDPOINT}`` は、Amazon ESのダッシュボードで確認した Endpoint に置き換えてください
 
-TODO
+TODO : tsを修正
 
 .. code-block:: bash
 
-  $ cat << EOT | curl -X POST ${YOUR_ES_ENDPOINT}/_bulk --data-binary @-
-  {"index":{"_index":"es-test","_type":"type1","_id":"1"}}
-  {"field1":1}
-  EOT
+    cat << EOT | curl -X POST ${YOUR_ES_ENDPOINT}/_bulk --data-binary @-
+    {"index":{"_index":"es-test","_type":"type1","_id":"1"}}
+    {"field1":1,"ts":"$(date +%Y-%m-%dT%H:%M:%S%z)"}
+    EOT
 
 コマンドの投入結果は下記のようになります
 
 .. code-block:: json
 
-  {"took":225,"errors":false,"items":[{"index":{"_index":"es-test","_type":"type1","_id":"1","_version":1,"status":201}}]}
+    {"took":403,"errors":false,"items":[{"index":{"_index":"es-test","_type":"type1","_id":"1","_version":1,"status":201}}]}
 
 errors が false なら成功です
 
@@ -78,11 +78,11 @@ Amazon ESのダッシュボードで得た Kibana のURLにアクセスします
 
 インデックスの設定を下記のとおりにします
 
-+----------------------------------+----------------+
-| Index contains time-based events | チェックを外す |
-+----------------------------------+----------------+
-| Index name or pattern            | ``es-test``    |
-+----------------------------------+----------------+
++-----------------------+----------------+
+| Index name or pattern | ``es-test``    |
++-----------------------+----------------+
+| Time-field name       | ts             |
++-----------------------+----------------+
 
 .. image:: images/bx1_03_kibana1.png
 
