--- a/docs/05.rst
+++ b/docs/05.rst
@@ -211,3 +211,10 @@ AWS IoTの証明書が削除できない
 #. 右側に現れたウィンドウの [Detail] で "dettach" します
 #. 改めて削除します
 
+Rule作成時に Lambda で作ったファンクションが見当たらない
+````````````````````````````````````````````````````````
+
+リージョンを確認してください
+
+AWS IoTとAWS Lambdaのリージョンは一致している必要があります
+
