--- a/docs/05.rst
+++ b/docs/05.rst
@@ -169,11 +169,15 @@ AWS IoTにはMQTTクライアントツールがあり、それを使って簡単
 #. "Publish to topic" をクリック
 #. 下記を入力して "Publish" をクリック
 
-+---------------+-------------------------------------------------------------------+
-| Publish topic | ``jawsdays2016/sensor0``                                          |
-+---------------+-------------------------------------------------------------------+
-| Payload       | ``{"deviceId":"awsiot-test0","field1":3,"field2":"from_awsiot"}`` |
-+---------------+-------------------------------------------------------------------+
++---------------+--------------------------------------------------------------------+
+| Publish topic | ``jawsdays2016/sensor0``                                           |
++---------------+--------------------------------------------------------------------+
+| Payload       | ``{"deviceId":"awsiot-test0","field1":3,"field2":"from aws iot"}`` |
++---------------+--------------------------------------------------------------------+
+
+.. note::
+
+    ``@timestamp`` の値(日付の文字列)は適当に修正してください
 
 .. image:: images/bx1_05_awsiot_mqtt_client.png
 
@@ -197,9 +201,7 @@ CloudWatchで確認することができます
 
 .. image:: images/bx1_05_cloudwatch.png
 
-CertificateファイルやPrivate keyファイルのダウンロードを忘れた / なくした
-`````````````````````````````````````````````````````````````````````````
-
+CertificateファイルやPrivate keyファイルのダウンロードを忘れg
 AWS IoT上で証明書を作成しなおしてください
 
 AWS IoTの証明書が削除できない
