--- a/docs/05.rst
+++ b/docs/05.rst
@@ -169,11 +169,11 @@ AWS IoTにはMQTTクライアントツールがあり、それを使って簡単
 #. "Publish to topic" をクリック
 #. 下記を入力して "Publish" をクリック
 
-+---------------+--------------------------------------------------------------------+
-| Publish topic | ``jawsdays2016/sensor0``                                           |
-+---------------+--------------------------------------------------------------------+
-| Payload       | ``{"deviceId":"awsiot-test0","field1":3,"field2":"from aws iot"}`` |
-+---------------+--------------------------------------------------------------------+
++---------------+-------------------------------------------------------------------------------------------+
+| Publish topic | ``jawsdays2016/sensor0``                                                                  |
++---------------+-------------------------------------------------------------------------------------------+
+| Payload       | ``{"state":{"reported":{"deviceId":"awsiot-test0","field1":3,"field2":"from aws iot"}}}`` |
++---------------+-------------------------------------------------------------------------------------------+
 
 .. note::
 
