--- a/docs/00.rst
+++ b/docs/00.rst
@@ -66,14 +66,13 @@ http://aws.amazon.com/jp/register-flow/
     * FTDIシリアルドライバーインストール済
     * シリアルコンソール制御用ターミナルソフトインストール済 (e.g. TeraTerm, GNU screen)
     * curlやwgetなどHTTPコールが可能なツール
-    * Node.js (0.10.36 or near version)
 
   * 参加者個人のAWSアカウント
   * 有効なクレジットカード (SORACOM Airのアクティベーションに使用)
 
 .. note::
 
-  Node.jsやcurl等のツール類はBX1の中に入っていますので、それを利用することも可能です(ただしBX1から利用する場合は3G回線費用が別途かかる可能性が有ります。その他、EC2インスタンスを用意して、そちらで実施することも可能です
+  curl等のツール類はBX1の中に入っていますので、それを利用することも可能です(ただしBX1から利用する場合は3G回線費用が別途かかる可能性が有ります。その他、EC2インスタンスを用意して、そちらで実施することも可能です
 
 注意事項
 --------
